Fix team avatar photos cutting off hair at the top

--- a/css/components.css
+++ b/css/components.css
@@ -1092,7 +1092,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center center;
+  object-position: center top;
   display: block;
   border-radius: 50%;
 }
